# datadog-apm-rust-sync

./: .gitignore  Cargo.toml  README.md  tmp
.github/workflows/: ci.yml
src/: api.rs  client.rs  lib.rs  model.rs
tests/: leak.rs  logging_filter.rs
