[package]
name = "datadog-apm-sync"
version = "0.1.2"
authors = ["Michael Micucci <9975355+kitsuneninetails@users.noreply.github.com>", "Fernando Gonçalves <fernando.goncalves@pipefy.com> (original base code)"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Datadog APM-compatible tracer and logger for Rust"
repository = "https://github.com/kitsuneninetails/datadog-apm-rust"

[dependencies]
chrono = "*"
hyper = "0.10"
filter-logger = "*"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rand = "0.3"
