[package]
name = "datadog-apm-sync"
version = "0.4.4"
authors = ["Michael Micucci <9975355+kitsuneninetails@users.noreply.github.com>", "Fernando Gonçalves <fernando.goncalves@pipefy.com> (original base code)"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Datadog APM-compatible tracer and logger for Rust"
repository = "https://github.com/kitsuneninetails/datadog-apm-rust-sync"

[dependencies]
chrono = "0.4.19"
filter-logger = "0.3.0"
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.7"
attohttpc = { version = "0.16", default-features=false, features = ["json", "tls-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.2.4"
tracing-futures = "0.2.4"

[dev-dependencies]
rand = "0.7"
tokio = { version = "1.0", features = ["full"] }
