[package]
name = "datadog-apm-sync"
version = "0.6.0"
authors = ["Michael Micucci <9975355+kitsuneninetails@users.noreply.github.com>", "Fernando Gonçalves <fernando.goncalves@pipefy.com> (original base code)"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Datadog APM-compatible tracer and logger for Rust"
repository = "https://github.com/kitsuneninetails/datadog-apm-rust-sync"

[dependencies]
chrono = "0.4.19"
crossbeam-channel = "0.5.6"
lazy_static = "1.4.0"
log = {version = "0.4", features = ["std"] }
attohttpc = { version = "0.23", default-features=false, features = ["json", "tls-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
